[package]
name = "curve25519-bpf-test"
version = "0.1.0"
authors = ["samkim-crypto <skim13@cs.stanford.edu>"]
edition = "2018"

[dependencies]
byteorder = { version = "^1.2.3", default-features = false, features = ["i128"] }
digest = { version = "0.9", default-features = false }
borsh = "0.8"
borsh-derive = "0.8.1"
